# AI-Powered-Web-Scraper-Agent

./: README.md
advanced-agent/: pyproject.toml
advanced-agent/src/: prompts.py  workflow.py
simple-agent/: main.py  pyproject.toml
